--- a/14Q/index.html
+++ b/14Q/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="150"></a></div>
     </header>
     <main>
     <div class="mainWrap">
@@ -22,26 +22,26 @@
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./14-question quize img/Q14.png">
+                    <img id="questionImage" src="">
                 </div>
                 <div class="answers">
                     <div class="line1">
-                        <div class="answer" id="ans1"><img src="./14-question quize img/Q14-01t.png"></div>
-                        <div class="answer" id="ans2"><img src="./14-question quize img/Q14-02.png"></div>
-                        <div class="answer" id="ans3"><img src="./14-question quize img/Q14-03.png"></div>
+                        <div class="answer" id="ans1"><img src=""></div>
+                        <div class="answer" id="ans2"><img src=""></div>
+                        <div class="answer" id="ans3"><img src=""></div>
                     </div>
                     <div class="line2">
-                        <div class="answer" id="ans4"><img src="./14-question quize img/Q14-04.png"></div>
-                        <div class="answer" id="ans5"><img src="./14-question quize img/Q14-05.png"></div>
-                        <div class="answer" id="ans6"><img src="./14-question quize img/Q14-06.png"></div>
+                        <div class="answer" id="ans4"><img src=""></div>
+                        <div class="answer" id="ans5"><img src=""></div>
+                        <div class="answer" id="ans6"><img src=""></div>
                     </div>
                 </div>
             </div>
             <div class="lower">
                 <div class="foot">
-                    <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/14Q/index.html">Back</a></button>
+                    <button class="Bbutton"><i class='bx bx-left-arrow-circle'></i><a href="/14Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span>14</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
