--- a/19Q/index.html
+++ b/19Q/index.html
@@ -6,13 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>IQ test</title>
+    <title>IQ Test</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/1Q/style.css">
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="100"></a></div>
     </header>
     <main>
     <div class="mainWrap">
@@ -22,13 +22,13 @@
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./19-question quize img/Q19.png">
+                    <img src="./19-question quize img/Q19.png" id="questionImage">
                 </div>
                 <div class="answers">
                     <div class="line1">
                         <div class="answer" id="ans1"><img src="./19-question quize img/Q19-01.png"></div>
                         <div class="answer" id="ans2"><img src="./19-question quize img/Q19-02.png"></div>
-                        <div class="answer" id="ans3"><img src="./13-question quize img/Q13-03.png"></div>
+                        <div class="answer" id="ans3"><img src="./19-question quize img/Q19-03.png"></div>
                     </div>
                     <div class="line2">
                         <div class="answer" id="ans4"><img src="./19-question quize img/Q19-04.png"></div>
@@ -39,9 +39,9 @@
             </div>
             <div class="lower">
                 <div class="foot">
-                    <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/18Q/index.html">Back</a></button>
+                    <button class="Bbutton"><i class='bx bx-left-arrow-circle'></i><a href="/18Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span>19</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
