--- a/20Q/index.html
+++ b/20Q/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="200px"></a></div>
     </header>
     <main>
     <div class="mainWrap">
@@ -22,12 +22,12 @@
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./20-question quize img/Q20.png">
+                    <img src="./20-question quize img/Q20.png" id="questionImage">
                 </div>
                 <div class="answers">
                     <div class="line1">
                         <div class="answer" id="ans1"><img src="./20-question quize img/Q20-01.png"></div>
-                        <div class="answer" id="ans2"><img src="./20-question quize img/Q20-01.png"></div>
+                        <div class="answer" id="ans2"><img src="./20-question quize img/Q20-02.png"></div>
                         <div class="answer" id="ans3"><img src="./20-question quize img/Q20-03t.png"></div>
                     </div>
                     <div class="line2">
@@ -41,7 +41,7 @@
                 <div class="foot">
                     <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/19Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span>20</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
