--- a/5Q/index.html
+++ b/5Q/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="auto"></a></div>
     </header>
     <main>
     <div class="mainWrap">
@@ -22,7 +22,7 @@
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./05-question quize img/Q5.png">
+                    <img id="questionImage" src="./05-question quize img/Q5.png">
                 </div>
                 <div class="answers">
                     <div class="line1">
@@ -41,7 +41,7 @@
                 <div class="foot">
                     <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/4Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span>5</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
