--- a/12Q/index.html
+++ b/12Q/index.html
@@ -12,43 +12,43 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="auto"></a></div>
     </header>
     <main>
-    <div class="mainWrap">
-        <div class="mainbox">
-            <div class="timerContainer">
-                <div id="timer" class="timer">20:00</div>
-            </div>
-            <div class="upper">
-                <div class="question">
-                    <img src="./12-question quize img/Q12.png">
+        <div class="mainWrap">
+            <div class="mainbox">
+                <div class="timerContainer">
+                    <div id="timer" class="timer">20:00</div>
                 </div>
-                <div class="answers">
-                    <div class="line1">
-                        <div class="answer" id="ans1"><img src="./12-question quize img/Q12-01t.png"></div>
-                        <div class="answer" id="ans2"><img src="./12-question quize img/Q12-02.png"></div>
-                        <div class="answer" id="ans3"><img src="./12-question quize img/Q12-03.png"></div>
+                <div class="upper">
+                    <div class="question">
+                        <img id="questionImage" src="./12-question quize img/Q12.png">
                     </div>
-                    <div class="line2">
-                        <div class="answer" id="ans4"><img src="./12-question quize img/Q12-04.png"></div>
-                        <div class="answer" id="ans5"><img src="./12-question quize img/Q12-05.png"></div>
-                        <div class="answer" id="ans6"><img src="./12-question quize img/Q12-06.png"></div>
+                    <div class="answers">
+                        <div class="line1">
+                            <div class="answer" id="ans1"><img src="./12-question quize img/Q12-01t.png"></div>
+                            <div class="answer" id="ans2"><img src="./12-question quize img/Q12-02.png"></div>
+                            <div class="answer" id="ans3"><img src="./12-question quize img/Q12-03.png"></div>
+                        </div>
+                        <div class="line2">
+                            <div class="answer" id="ans4"><img src="./12-question quize img/Q12-04.png"></div>
+                            <div class="answer" id="ans5"><img src="./12-question quize img/Q12-05.png"></div>
+                            <div class="answer" id="ans6"><img src="./12-question quize img/Q12-06.png"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="lower">
-                <div class="foot">
-                    <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/9Q/index.html">Back</a></button>
-                    <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                <div class="lower">
+                    <div class="foot">
+                        <button class="Bbutton"><i class='bx bx-left-arrow-circle'></i><a href="/9Q/index.html">Back</a></button>
+                        <div class="score">
+                            <span>12</span><span>/</span><span>20</span>
+                        </div>
+                        <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
+                        <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
                     </div>
-                    <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
-                    <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
                 </div>
             </div>
         </div>
-    </div>
     </main>
     <script src="script.js"></script>
 </body>
