--- a/15Q/index.html
+++ b/15Q/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" alt="Logo" width="100"></a></div>
     </header>
     <main>
     <div class="mainWrap">
@@ -22,18 +22,18 @@
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./15-question quize img/Q15.png">
+                    <img id="questionImage" src="./15-question quize img/Q15.png" alt="Question Image">
                 </div>
                 <div class="answers">
                     <div class="line1">
-                        <div class="answer" id="ans1"><img src="./15-question quize img/Q15-01.png"></div>
-                        <div class="answer" id="ans2"><img src="./15-question quize img/Q15-02t.png"></div>
-                        <div class="answer" id="ans3"><img src="./15-question quize img/Q15-03.png"></div>
+                        <div class="answer" id="ans1"><img src="./15-question quize img/Q15-01.png" alt="Answer 1"></div>
+                        <div class="answer" id="ans2"><img src="./15-question quize img/Q15-02t.png" alt="Answer 2"></div>
+                        <div class="answer" id="ans3"><img src="./15-question quize img/Q15-03.png" alt="Answer 3"></div>
                     </div>
                     <div class="line2">
-                        <div class="answer" id="ans4"><img src="./15-question quize img/Q15-04.png"></div>
-                        <div class="answer" id="ans5"><img src="./15-question quize img/Q15-05.png"></div>
-                        <div class="answer" id="ans6"><img src="./15-question quize img/Q15-06.png"></div>
+                        <div class="answer" id="ans4"><img src="./15-question quize img/Q15-04.png" alt="Answer 4"></div>
+                        <div class="answer" id="ans5"><img src="./15-question quize img/Q15-05.png" alt="Answer 5"></div>
+                        <div class="answer" id="ans6"><img src="./15-question quize img/Q15-06.png" alt="Answer 6"></div>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="foot">
                     <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/14Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span>15</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
