--- a/4Q/index.html
+++ b/4Q/index.html
@@ -12,17 +12,17 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="auto"></a></div>
     </header>
     <main>
     <div class="mainWrap">
         <div class="mainbox">
             <div class="timerContainer">
-                <div id="timer" class="timer">20:00</div>
+                <div id="timer" class="timer">02:00</div>
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./04-question quize img/Q4.png">
+                    <img id="questionImage" src="./04-question quize img/Q4.png">
                 </div>
                 <div class="answers">
                     <div class="line1">
@@ -39,9 +39,9 @@
             </div>
             <div class="lower">
                 <div class="foot">
-                    <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/3Q/index.html">Back</a></button>
+                    <button class="Bbutton"><i class='bx bx-left-arrow-circle'></i><a href="/3Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span id="currentQuestionIndex">4</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
