--- a/9Q/index.html
+++ b/9Q/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width=></a></div>
+        <div class="logo"><a href="/homepage/index.html"><img src="/quizBefore/forImages/logo.png" width="150"></a></div>
     </header>
     <main>
     <div class="mainWrap">
@@ -22,7 +22,7 @@
             </div>
             <div class="upper">
                 <div class="question">
-                    <img src="./09-question quize img/Q9.png">
+                    <img src="./09-question quize img/Q9.png" id="questionImage">
                 </div>
                 <div class="answers">
                     <div class="line1">
@@ -39,9 +39,9 @@
             </div>
             <div class="lower">
                 <div class="foot">
-                    <button class="Bbutton"><i class='bx bx-left-arrow-circle' ></i><a href="/5Q/index.html">Back</a></button>
+                    <button class="Bbutton"><i class='bx bx-left-arrow-circle'></i><a href="/5Q/index.html">Back</a></button>
                     <div class="score">
-                        <span>1</span><span>/</span><span>20</span>
+                        <span>9</span><span>/</span><span>20</span>
                     </div>
                     <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
                     <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
