--- a/1Q/index.html
+++ b/1Q/index.html
@@ -43,7 +43,7 @@
                         <div class="score">
                             <span id="currentQuestionIndex">1</span><span>/</span><span>20</span>
                         </div>
-                        <button class="submitButton">Submit <i class='bx bx-right-arrow-circle'></i></button>
+                        <button class="submitButton"><span>Submit</span> <i class='bx bx-right-arrow-circle'></i></button>
                         <button class="nextButton" style="display: none;">Next <i class='bx bx-right-arrow-circle'></i></button>
                     </div>
                 </div>
